--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ li {
 
         <!-- Caja de contenido sin borde -->
         <div class="content" style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
-            <h2>🚀 Bienvenido/a a GastroSat</h2>
+            <h2>🚀 Bienvenido/a a Gastrosat</h2>
             <p><strong>Servicio de Asistencia Técnica & Equipamiento Profesional para la Hostelería en Mallorca.</strong></p>
 
             <p>Cuando no podemos reparar una máquina, te vendemos una nueva. Por eso nuestras cifras de ventas son tan bajas.📉</p>
@@ -218,7 +218,7 @@ li {
 </div>
     <br>
     <p>©2025 GastroSat. Algunos derechos reservados.</p>
-    <p>Desarrollado con 💚 por <strong>GastroSat</strong></p>
+    <p>Desarrollado con 💚 por <strong>Gastrosat</strong></p>
 </footer>
 
 
