--- a/index.html
+++ b/index.html
@@ -214,7 +214,10 @@ li {
 <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-bottom: 10px;">
     <a href="https://www.eurofours.com/es" target="_blank">
         <img src="logos_proveedores/eurofours.png" alt="Logo Eurofours" style="height: 50px;" loading="lazy">
-    </a>   
+    </a> 
+    <a href="https://www.tecnoinox.it/" target="_blank">
+        <img src="logos_proveedores/edenox.webp" alt="Logo Tecnoinox" style="height: 50px;" loading="lazy">
+    </a>  
 </div>
     <br>
     <p>©2025 GastroSat. Algunos derechos reservados.</p>
