--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@ li {
     <a href="https://www.eurofours.com/es" target="_blank">
         <img src="logos_proveedores/eurofours.png" alt="Logo Eurofours" style="height: 50px;" loading="lazy">
     </a> 
-    <a href="https://www.tecnoinox.it/" target="_blank">
-        <img src="logos_proveedores/edenox.webp" alt="Logo Tecnoinox" style="height: 100px;" loading="lazy">
+    <a href="https://www.edenox.es/" target="_blank">
+        <img src="logos_proveedores/edenox.webp" alt="Logo Edenox" style="height: 50px;" loading="lazy">
     </a>  
 </div>
     <br>
