--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ a:hover {
 footer img {
     opacity: 0.5;
     transition: opacity 0.3s ease-in-out;
+    margin-right: 10px;
 }
 
 /* Recupera la opacidad al pasar el ratón */
