--- a/facturacion/index.html
+++ b/facturacion/index.html
@@ -8,7 +8,8 @@
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
 
     <script>
         // 🔹 Configuración de Firebase (usa tus datos)
@@ -22,56 +23,68 @@
             measurementId: "G-MC2S07WMSL"
         };
         firebase.initializeApp(firebaseConfig);
-        firebase.analytics();
 
         // 🔹 Correo permitido para acceder (cambia esto por tu cuenta)
         const emailPermitido = "TU_CORREO@gmail.com";
 
-        // 🔹 Función para iniciar sesión manualmente con email/contraseña
-        function login() {
-            const email = document.getElementById("email").value;
-            const password = document.getElementById("password").value;
+        // 🔹 Configurar FirebaseUI
+        const ui = new firebaseui.auth.AuthUI(firebase.auth());
 
-            firebase.auth().signInWithEmailAndPassword(email, password)
-                .then((userCredential) => {
-                    const user = userCredential.user;
-                    if (user.email === emailPermitido) {
-                        document.getElementById("login-container").style.display = "none";
-                        document.getElementById("contenido").style.display = "block";
-                    } else {
-                        alert("Acceso denegado. No tienes permisos.");
-                        firebase.auth().signOut();
+        function iniciarFirebaseUI() {
+            ui.start('#firebaseui-auth-container', {
+                signInOptions: [
+                    firebase.auth.GoogleAuthProvider.PROVIDER_ID // Solo permite iniciar sesión con Google
+                ],
+                signInFlow: "popup", // Evita redirección
+                callbacks: {
+                    signInSuccessWithAuthResult: function(authResult) {
+                        const user = authResult.user;
+                        if (user.email === emailPermitido) {
+                            document.getElementById("contenido").style.display = "block";
+                            document.getElementById("login-container").style.display = "none";
+                        } else {
+                            alert("Acceso denegado. No tienes permisos.");
+                            firebase.auth().signOut();
+                        }
+                        return false;
                     }
-                })
-                .catch((error) => {
-                    alert("Error: " + error.message);
-                });
+                }
+            });
         }
+
+        // 🔹 Detectar cambios en la autenticación
+        firebase.auth().onAuthStateChanged(user => {
+            if (user && user.email === emailPermitido) {
+                document.getElementById("contenido").style.display = "block";
+                document.getElementById("login-container").style.display = "none";
+            } else {
+                document.getElementById("contenido").style.display = "none";
+                document.getElementById("login-container").style.display = "block";
+                iniciarFirebaseUI();
+            }
+        });
 
         // 🔹 Función para cerrar sesión
         function logout() {
             firebase.auth().signOut().then(() => {
                 document.getElementById("contenido").style.display = "none";
                 document.getElementById("login-container").style.display = "block";
+                iniciarFirebaseUI();
             });
         }
     </script>
 
     <style>
-        body { font-family: Arial, sans-serif; max-width: 400px; margin: auto; padding: 20px; }
-        input, button { width: 100%; padding: 10px; margin: 5px 0; }
+        body { font-family: Arial, sans-serif; max-width: 400px; margin: auto; padding: 20px; text-align: center; }
         #contenido { display: none; }
     </style>
-
 </head>
 <body>
 
-    <!-- 🔹 Formulario de Login -->
+    <!-- 🔹 Contenedor de inicio de sesión -->
     <div id="login-container">
         <h2>Iniciar Sesión</h2>
-        <input type="email" id="email" placeholder="Correo electrónico">
-        <input type="password" id="password" placeholder="Contraseña">
-        <button onclick="login()">Iniciar sesión</button>
+        <div id="firebaseui-auth-container"></div> <!-- FirebaseUI renderiza el login aquí -->
     </div>
 
     <!-- 🔹 Contenido privado (visible solo tras iniciar sesión) -->
