--- a/facturacion/index.html
+++ b/facturacion/index.html
@@ -9,10 +9,11 @@
     <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore-compat.js"></script>
+    
     <link rel="stylesheet" type="text/css" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
 
     <script>
-        
         // 🔹 Configuración de Firebase (usa tus datos)
         const firebaseConfig = {
             apiKey: "AIzaSyAst9f2-Jro1d4OX0henL8OeKXT4Ds35uA",
@@ -24,6 +25,9 @@
             measurementId: "G-MC2S07WMSL"
         };
         firebase.initializeApp(firebaseConfig);
+
+        // 🔹 Base de datos Firestore
+        const db = firebase.firestore();
 
         // 🔹 Correo permitido para acceder
         const emailPermitido = "aesg.alexis@gmail.com"; // Reemplázalo con tu cuenta
@@ -58,6 +62,7 @@
                 if (user.email === emailPermitido) {
                     document.getElementById("contenido").style.display = "block";
                     document.getElementById("login-container").style.display = "none";
+                    cargarClientes();
                 } else {
                     firebase.auth().signOut();
                     document.getElementById("contenido").style.display = "none";
@@ -71,6 +76,48 @@
             }
         });
 
+        // 🔹 Guardar un cliente en Firestore
+        function guardarCliente() {
+            const nombre = document.getElementById("cliente-nombre").value;
+            const email = document.getElementById("cliente-email").value;
+
+            if (!nombre || !email) {
+                alert("Completa los datos del cliente");
+                return;
+            }
+
+            db.collection("clientes").add({
+                nombre: nombre,
+                email: email,
+                creado: firebase.firestore.FieldValue.serverTimestamp()
+            })
+            .then(() => {
+                alert("Cliente agregado correctamente");
+                document.getElementById("cliente-nombre").value = "";
+                document.getElementById("cliente-email").value = "";
+                cargarClientes();
+            })
+            .catch(error => {
+                console.error("Error al guardar cliente:", error);
+                alert("Hubo un error al guardar el cliente");
+            });
+        }
+
+        // 🔹 Cargar clientes desde Firestore y mostrarlos en la lista
+        function cargarClientes() {
+            const lista = document.getElementById("lista-clientes");
+            lista.innerHTML = ""; // Limpiar lista antes de recargar
+
+            db.collection("clientes").orderBy("creado", "desc").get().then(snapshot => {
+                snapshot.forEach(doc => {
+                    const cliente = doc.data();
+                    const li = document.createElement("li");
+                    li.textContent = `${cliente.nombre} - ${cliente.email}`;
+                    lista.appendChild(li);
+                });
+            });
+        }
+
         // 🔹 Función para cerrar sesión
         function logout() {
             firebase.auth().signOut().then(() => {
@@ -79,61 +126,6 @@
                 iniciarFirebaseUI();
             });
         }
-        <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore-compat.js"></script>
-
-<script>
-    const db = firebase.firestore();
-
-    // 🔹 Guardar un cliente en Firestore
-    function guardarCliente() {
-        const nombre = document.getElementById("cliente-nombre").value;
-        const email = document.getElementById("cliente-email").value;
-
-        if (!nombre || !email) {
-            alert("Completa los datos del cliente");
-            return;
-        }
-
-        db.collection("clientes").add({
-            nombre: nombre,
-            email: email,
-            creado: firebase.firestore.FieldValue.serverTimestamp()
-        })
-        .then(() => {
-            alert("Cliente agregado correctamente");
-            document.getElementById("cliente-nombre").value = "";
-            document.getElementById("cliente-email").value = "";
-            cargarClientes();
-        })
-        .catch(error => {
-            console.error("Error al guardar cliente:", error);
-            alert("Hubo un error al guardar el cliente");
-        });
-    }
-
-    // 🔹 Cargar clientes desde Firestore y mostrarlos en la lista
-    function cargarClientes() {
-        const lista = document.getElementById("lista-clientes");
-        lista.innerHTML = ""; // Limpiar lista antes de recargar
-
-        db.collection("clientes").orderBy("creado", "desc").get().then(snapshot => {
-            snapshot.forEach(doc => {
-                const cliente = doc.data();
-                const li = document.createElement("li");
-                li.textContent = `${cliente.nombre} - ${cliente.email}`;
-                lista.appendChild(li);
-            });
-        });
-    }
-
-    // 🔹 Cargar clientes al cargar la página
-    firebase.auth().onAuthStateChanged(user => {
-        if (user) {
-            cargarClientes();
-        }
-    });
-</script>
-
     </script>
 
     <style>
@@ -154,6 +146,14 @@
         <h2>Bienvenido a la Facturación de Gastrosat</h2>
         <p>Contenido privado solo para tu cuenta.</p>
         <button onclick="logout()">Cerrar sesión</button>
+
+        <h3>Agregar Cliente</h3>
+        <input type="text" id="cliente-nombre" placeholder="Nombre del cliente">
+        <input type="email" id="cliente-email" placeholder="Correo del cliente">
+        <button onclick="guardarCliente()">Guardar Cliente</button>
+
+        <h3>Lista de Clientes</h3>
+        <ul id="lista-clientes"></ul>
     </div>
 
 </body>
