--- a/gestion/index.html
+++ b/gestion/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestión - GastroSat 1</title>
+    <title>Gestión - GastroSat</title>
 
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app-compat.js"></script>
@@ -82,9 +82,34 @@
     </script>
 
     <style>
-        body { font-family: Arial, sans-serif; max-width: 400px; margin: auto; padding: 20px; text-align: center; }
-        button { width: 90%; padding: 10px; margin: 10px; font-size: 16px; cursor: pointer; }
-        .menu-container { display: flex; flex-direction: column; gap: 10px; margin-top: 20px; }
+        body { 
+            font-family: Arial, sans-serif; 
+            max-width: 400px; 
+            margin: auto; 
+            padding: 20px; 
+            text-align: center; 
+        }
+        button { 
+            width: 90%; 
+            padding: 10px; 
+            margin: 10px; 
+            font-size: 16px; 
+            cursor: pointer; 
+            border-radius: 12px;  /* 🔹 Bordes redondeados */
+            border: 1px solid #ddd;
+            background-color: #007BFF; 
+            color: white; 
+            transition: 0.3s;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        .menu-container { 
+            display: flex; 
+            flex-direction: column; 
+            gap: 10px; 
+            margin-top: 20px; 
+        }
     </style>
 </head>
 <body>
